--- a/src/css/login_register.css
+++ b/src/css/login_register.css
@@ -21,7 +21,7 @@
     border: 0 solid #f6f6f6;
     border-radius: 0.25rem;
     margin-bottom: 1.25rem;
-    box-shadow: 0 2px 4px rgba(15, 34, 58, 0.12);
+    box-shadow: 25px 25px 15px rgba(15, 34, 58, 0.12);
 }
 .wrapper{
     position: relative;
